fix broken layout as footer is not stick to the bottom

--- a/application.css
+++ b/application.css
@@ -14,6 +14,11 @@
 
  */
 
+#main-content {
+  height: 100%;
+  overflow: auto;
+}
+
 .thumbnail {
   border: none;
   background: transparent;
